--- a/src/Nut.MediatR.Behaviors/Nut.MediatR.Behaviors.csproj
+++ b/src/Nut.MediatR.Behaviors/Nut.MediatR.Behaviors.csproj
@@ -41,6 +41,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
   </ItemGroup>
   
   <ItemGroup>
