--- a/.azuredevops/azure-pipelines.yml
+++ b/.azuredevops/azure-pipelines.yml
@@ -21,10 +21,10 @@ steps:
     packagesToPack: 'src/**/*.csproj'
     versioningScheme: 'off'
 
-# - task: NuGetCommand@2
-#   inputs:
-#     command: 'push'
-#     packagesToPush: '$(Build.ArtifactStagingDirectory)/**/*.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg'
-#     nuGetFeedType: 'internal'
-#     publishVstsFeed: '5793cbd9-a472-4a2d-8955-d865d42a2d11/0938abc2-6bcc-4532-a9d7-03546ab0e6b3'
-#     allowPackageConflicts: true
+- task: NuGetCommand@2
+  inputs:
+    command: 'push'
+    packagesToPush: '$(Build.ArtifactStagingDirectory)/**/*.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg'
+    nuGetFeedType: 'internal'
+    publishVstsFeed: '5793cbd9-a472-4a2d-8955-d865d42a2d11/0938abc2-6bcc-4532-a9d7-03546ab0e6b3'
+    allowPackageConflicts: true
