update readme and codecoverage publish settings.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,15 +25,15 @@ jobs:
       run: dotnet test --no-restore --verbosity normal ./test/Nut.MediatR.Behaviors.Test/Nut.MediatR.Behaviors.Test.csproj /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura /p:CoverletOutput=../../Nut.MediatR.Behaviors.coverage.xml
     - name: Test Nut.MediatR.Behaviors.FluentValidation
       run: dotnet test --no-restore --verbosity normal ./test/Nut.MediatR.Behaviors.FluentValidation.Test/Nut.MediatR.Behaviors.FluentValidation.Test.csproj /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura /p:CoverletOutput=../../Nut.MediatR.Behaviors.FluentValidation.coverage.xml
-   # - name: Codecov
-   #   uses: codecov/codecov-action@v1.0.14
-   #   with:
-   #     # User defined upload name. Visible in Codecov UI
-   #     name: Nut.MediatR.Behaviors
-   #     # Repository upload token - get it from codecov.io. Required only for private repositories
-   #     token: ${{ secrets.CODECOV_TOKEN }}
-   #     # Path to coverage file to upload
-   #     files: ./Nut.MediatR.Behaviors.coverage.xml,./Nut.MediatR.Behaviors.FluentValidation.coverage.xml
-   #     flags: unittests
-   #     fail_ci_if_error: true
-   #     verbose: true
+    - name: Codecov
+      uses: codecov/codecov-action@v1.0.14
+      with:
+        # User defined upload name. Visible in Codecov UI
+        name: Nut.MediatR
+        # Repository upload token - get it from codecov.io. Required only for private repositories
+        token: ${{ secrets.CODECOV_TOKEN }}
+        # Path to coverage file to upload
+        files: ./Nut.MediatR.Behaviors.coverage.xml,./Nut.MediatR.Behaviors.FluentValidation.coverage.xml
+        flags: unittests
+        fail_ci_if_error: true
+        verbose: true
