--- a/test/Nut.MediatR.Behaviors.Test/Nut.MediatR.Behaviors.Test.csproj
+++ b/test/Nut.MediatR.Behaviors.Test/Nut.MediatR.Behaviors.Test.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-
+    <TargetFramework>net5.0</TargetFramework>
+    <LangVersion>9</LangVersion>
     <IsPackable>false</IsPackable>
 
     <RootNamespace>Nut.MediatR.Test</RootNamespace>
