--- a/.azuredevops/azure-pipelines.yml
+++ b/.azuredevops/azure-pipelines.yml
@@ -13,6 +13,11 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
+- task: UseDotNet@2
+  displayName: 'Install .Net 5 SDK'
+  inputs:
+    packageType: 'sdk'
+    version: '5.0.x'
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
 - task: DotNetCoreCLI@2
