--- a/src/Nut.MediatR.ServiceLike.DependencyInjection/Nut.MediatR.ServiceLike.DependencyInjection.csproj
+++ b/src/Nut.MediatR.ServiceLike.DependencyInjection/Nut.MediatR.ServiceLike.DependencyInjection.csproj
@@ -38,4 +38,11 @@
     <ProjectReference Include="..\Nut.MediatR.ServiceLike\Nut.MediatR.ServiceLike.csproj" />
   </ItemGroup>
   
+  <ItemGroup>
+    <None Include="..\..\assets\logo\logo_128.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+  </ItemGroup>
+  
 </Project>
