--- a/src/Nut.MediatR.ServiceLike.DependencyInjection/Nut.MediatR.ServiceLike.DependencyInjection.csproj
+++ b/src/Nut.MediatR.ServiceLike.DependencyInjection/Nut.MediatR.ServiceLike.DependencyInjection.csproj
@@ -52,5 +52,9 @@
       <PackagePath></PackagePath>
     </None>
   </ItemGroup>
-  
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+      <_Parameter1>$(AssemblyName).Test</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
 </Project>
