--- a/src/Nut.MediatR.ServiceLike/Nut.MediatR.ServiceLike.csproj
+++ b/src/Nut.MediatR.ServiceLike/Nut.MediatR.ServiceLike.csproj
@@ -40,6 +40,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Nut.ResxBridge" Version="0.1.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="System.Text.Json" Version="5.0.0" />
   </ItemGroup>
 
