--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,20 +16,15 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 5.0.x
+        dotnet-version: 6.0.x
     - name: Install dependencies
       run: dotnet restore
     - name: Build
       run: dotnet build --configuration Release --no-restore
-    - name: Test Nut.MediatR.Behaviors
-      run: dotnet test --no-restore --verbosity normal ./test/Nut.MediatR.Behaviors.Test/Nut.MediatR.Behaviors.Test.csproj /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura /p:CoverletOutput=../../Nut.MediatR.Behaviors.coverage.xml /p:ExcludeByAttribute=CompilerGenerated
-    - name: Test Nut.MediatR.Behaviors.FluentValidation
-      run: dotnet test --no-restore --verbosity normal ./test/Nut.MediatR.Behaviors.FluentValidation.Test/Nut.MediatR.Behaviors.FluentValidation.Test.csproj /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura /p:CoverletOutput=../../Nut.MediatR.Behaviors.FluentValidation.coverage.xml /p:ExcludeByAttribute=CompilerGenerated
-    - name: Test Nut.MediatR.ServiceLike
-      run: dotnet test --no-restore --verbosity normal ./test/Nut.MediatR.ServiceLike.Test/Nut.MediatR.ServiceLike.Test.csproj /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura /p:CoverletOutput=../../Nut.MediatR.ServiceLike.coverage.xml /p:ExcludeByAttribute=CompilerGenerated
-    - name: Test Nut.MediatR.ServiceLike.DependencyInjection
-      run: dotnet test --no-restore --verbosity normal ./test/Nut.MediatR.ServiceLike.DependencyInjection.Test/Nut.MediatR.ServiceLike.DependencyInjection.Test.csproj /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura /p:CoverletOutput=../../Nut.MediatR.ServiceLike.DependencyInjection.coverage.xml /p:Include="[Nut.MediatR.ServiceLike.DependencyInjection*]*" /p:ExcludeByAttribute=CompilerGenerated
-
+    - name: Test
+      run: |
+        ./test.ps1
+      shell: pwsh
     - name: Codecov
       uses: codecov/codecov-action@v1.0.14
       with:
