--- a/src/Nut.MediatR.ServiceLike.DependencyInjection/Nut.MediatR.ServiceLike.DependencyInjection.csproj
+++ b/src/Nut.MediatR.ServiceLike.DependencyInjection/Nut.MediatR.ServiceLike.DependencyInjection.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
@@ -26,7 +26,7 @@
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <!--minver-->
     <MinVerTagPrefix>v</MinVerTagPrefix>
-    <MinVerDefaultPreReleasePhase>preview</MinVerDefaultPreReleasePhase>
+    <MinVerDefaultPreReleaseIdentifiers>preview.0</MinVerDefaultPreReleaseIdentifiers>
     <PackageIcon>logo_128.png</PackageIcon>
     <RepositoryUrl>https://github.com/Archway-SharedLib/Nut.MediatR</RepositoryUrl>
   </PropertyGroup>
