--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
         ./test.ps1 -noReport
       shell: pwsh
     - name: Codecov
-      uses: codecov/codecov-action@3
+      uses: codecov/codecov-action@v3.1.4
       with:
         # User defined upload name. Visible in Codecov UI
         name: Nut.MediatR
