--- a/src/Nut.MediatR.Behaviors.FluentValidation/Nut.MediatR.Behaviors.FluentValidation.csproj
+++ b/src/Nut.MediatR.Behaviors.FluentValidation/Nut.MediatR.Behaviors.FluentValidation.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
@@ -50,5 +50,9 @@
       <PackagePath></PackagePath>
     </None>
   </ItemGroup>
-
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>Nut.MediatR.Behaviors.FluentValidation.Test</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
 </Project>
