--- a/.azuredevops/azure-pipelines.yml
+++ b/.azuredevops/azure-pipelines.yml
@@ -38,6 +38,12 @@ steps:
     packagesToPack: 'src/**/*.csproj'
     versioningScheme: 'off'
 
+- task: NuGetToolInstaller@1
+  displayName: 'NuGet Tool Installer'
+
+- task: NuGetAuthenticate@1
+  displayName: 'NuGet Authenticate'
+
 - task: NuGetCommand@2
   inputs:
     command: 'push'
