--- a/.azuredevops/azure-pipelines.yml
+++ b/.azuredevops/azure-pipelines.yml
@@ -44,10 +44,14 @@ steps:
 - task: NuGetAuthenticate@1
   displayName: 'NuGet Authenticate'
 
-- task: NuGetCommand@2
-  inputs:
-    command: 'push'
-    packagesToPush: '$(Build.ArtifactStagingDirectory)/**/*.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg'
-    nuGetFeedType: 'internal'
-    publishVstsFeed: '5793cbd9-a472-4a2d-8955-d865d42a2d11/0938abc2-6bcc-4532-a9d7-03546ab0e6b3'
-    allowPackageConflicts: true
+- script: |
+      nuget.exe push -Source "https://pkgs.dev.azure.com/archwaydev/Archway%20Shared%20Library/_packaging/Archway-SharedLib/nuget/v3/index.json" -ApiKey az $(Build.ArtifactStagingDirectory)\*.nupkg
+  displayName: Push
+
+# - task: NuGetCommand@2
+#   inputs:
+#     command: 'push'
+#     packagesToPush: '$(Build.ArtifactStagingDirectory)/**/*.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg'
+#     nuGetFeedType: 'internal'
+#     publishVstsFeed: '5793cbd9-a472-4a2d-8955-d865d42a2d11/0938abc2-6bcc-4532-a9d7-03546ab0e6b3'
+#     allowPackageConflicts: true
