--- a/.azuredevops/azure-pipelines.yml
+++ b/.azuredevops/azure-pipelines.yml
@@ -45,7 +45,7 @@ steps:
   displayName: 'NuGet Authenticate'
 
 - script: |
-      nuget.exe push -Source "https://pkgs.dev.azure.com/archwaydev/Archway%20Shared%20Library/_packaging/Archway-SharedLib/nuget/v3/index.json" -ApiKey az $(Build.ArtifactStagingDirectory)\*.nupkg
+      nuget.exe push -Source "https://pkgs.dev.azure.com/archwaydev/5793cbd9-a472-4a2d-8955-d865d42a2d11/_packaging/Archway-SharedLib/nuget/v3/index.json" -ApiKey az $(Build.ArtifactStagingDirectory)\*.nupkg
   displayName: Push
 
 # - task: NuGetCommand@2
